# wbk--hello-pytest

./: .coverage  .env  .gitignore  CHANGELOG.md  Makefile  README.md  conftest.py  gulpfile.js  package-lock.json  package.json  prod.prop  pyproject.toml  qa.prop  readme.md  release.config.js  requirements.txt  stylelint.config.js
.github/workflows/: ci-build.yml  ci-release.yml  ci-test.yml  ci.yml
assets/: package-lock.json  package.json
backend/httpd/: httpd.Dockerfile
backend/proxy/: default.conf  openssl.bash  proxy.Dockerfile
dashboard/source/: package.json  server.js
docker/: docker-compose.yml
docs/: index.html
docs/javascript/: index.page.js
docs/styles/: index.page.min.css
frontend/: .eslintrc  package-lock.json  package.json
frontend/landing/: package-lock.json  package.json
server/: .bash  .env
server/source/: readme.md
src/: app.py
src/controllers/: item_controller.py  math_controller.py  string_controller.py
src/models/: item_model.py
src/utils/: math_utils.py  string_utils.py  temperature_utils.py
tests/config/: data.csv
tests/e2e/: test_app_e2e.py
tests/integration/: test_app_integration.py  test_mvc_layer_controller_behavior.py  test_mvc_layer_router_model_binding.py  test_mvc_layer_validation.py
tests/performance/: test_performance.py
tests/security/: test_security.py
tests/unit/: test_app_factory.py  test_configuration.py  test_error_handlers.py  test_item_model.py  test_math_utils.py  test_routes.py  test_string_utils.py  (+1 more)
wiki/: CHANGELOG.md  branching-strategy.excalidraw
www/: readme.md
(+100 files in other folders)
